--- a/index.html
+++ b/index.html
@@ -958,15 +958,16 @@
       <li><a href="#testimonials">Reviews</a></li>
       <li><a href="#process">How It Works</a></li>
       <li><a href="#faq">FAQ</a></li>
+      <li><a href="#faq">Contact</a></li>
     </ul>
 
     <!-- Desktop CTA -->
     <div class="nav-cta">
-      <a href="tel:+1541000000" class="nav-phone">
+      <a href="tel:+15417411980" class="nav-phone">
         <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.79 19.79 0 0 1 11.61 19a19.5 19.5 0 0 1-6-6A19.79 19.79 0 0 1 3.09 4.18 2 2 0 0 1 5.08 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L9.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 23 17z"/>
         </svg>
-        (541) 000-0000
+        (541) 741-1980
       </a>
       <a href="#contact" class="btn-primary">Free Consultation</a>
     </div>
@@ -1011,11 +1012,11 @@
     <li><a href="#faq" onclick="closeMenu()">FAQ</a></li>
   </ul>
   <div class="mobile-menu-footer">
-    <a href="tel:+1541000000" class="btn-outline" style="justify-content:center;">
+    <a href="tel:+15417411980" class="btn-outline" style="justify-content:center;">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.79 19.79 0 0 1 11.61 19a19.5 19.5 0 0 1-6-6A19.79 19.79 0 0 1 3.09 4.18 2 2 0 0 1 5.08 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L9.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 23 17z"/>
       </svg>
-      (541) 000-0000
+      (541) 741-1980
     </a>
     <a href="#contact" class="btn-primary" onclick="closeMenu()" style="justify-content:center;">Free Consultation</a>
   </div>
@@ -1050,7 +1051,7 @@
       <div class="hero-visual">
         <div class="hero-card-main">
           <div class="hero-card-label">Your Financial Health</div>
-          <div class="hero-card-title">2024 Year-End Summary</div>
+          <div class="hero-card-title">2025 Year-End Summary</div>
           <div class="hero-stats">
             <div class="hero-stat">
               <div class="num">$4.2k</div>
@@ -1098,10 +1099,10 @@
       <div class="trust-item">
         <div class="trust-icon">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="rgba(255,255,255,0.85)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/>
           </svg>
         </div>
-        <span>50–75% Below Market Pricing</span>
+        <span>Locally Owned &amp; Operated</span>
       </div>
       <div class="trust-item">
         <div class="trust-icon">
@@ -1118,14 +1119,6 @@
           </svg>
         </div>
         <span>Year-Round Tax Support</span>
-      </div>
-      <div class="trust-item">
-        <div class="trust-icon">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="rgba(255,255,255,0.85)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/>
-          </svg>
-        </div>
-        <span>Locally Owned &amp; Operated</span>
       </div>
     </div>
   </div>
@@ -1307,7 +1300,7 @@
               </svg>
             </div>
             <div>
-              <h4>Prices Up to 75% Less</h4>
+              <h4>Competitive Pricing</h4>
               <p>Our pricing is often half to a quarter of what other local or national bookkeeping services charge — without cutting corners.</p>
             </div>
           </li>
@@ -1631,7 +1624,7 @@
           </div>
           <div>
             <div style="font-weight:600;color:#fff;font-size:14px;margin-bottom:3px;">Phone</div>
-            <a href="tel:+15410000000" style="font-size:14px;color:rgba(255,255,255,0.7);text-decoration:none;">(541) 000-0000</a>
+            <a href="tel:+15417411980" style="font-size:14px;color:rgba(255,255,255,0.7);text-decoration:none;">(541) 741-1980</a>
           </div>
         </div>
       </div>
@@ -1701,7 +1694,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Bookkeepers Unlimited. All rights reserved. &bull; Springfield, OR 97477</p>
+      <p>&copy; 2026 Bookkeepers Unlimited. All rights reserved. &bull; Springfield, OR 97477</p>
       <p><a href="#" style="color:rgba(255,255,255,0.4);text-decoration:none;">Privacy Policy</a> &bull; <a href="#" style="color:rgba(255,255,255,0.4);text-decoration:none;">Terms of Service</a></p>
     </div>
   </div>
